Parte 2 do exercício 8.

--- a/2C/8- Empresa/8- Empresa/8- Empresa.csproj
+++ b/2C/8- Empresa/8- Empresa/8- Empresa.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Empregado.cs" />
+    <Compile Include="Funcionário.cs" />
     <Compile Include="Gerente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
